--- a/css/my-coupons.css
+++ b/css/my-coupons.css
@@ -67,162 +67,165 @@ body {
 
 /* footer */
 .footer-section {
-    background-color: #150a0a;
-  }
-  
-  .footer-left-sec p {
-    font-size: 14px;
-    letter-spacing: 1px;
-    color: #bfa9a9ea;
-  }
-  
-  .footer-contact-details-body  {
-   display: flex;
-   justify-content:space-evenly;
-  }
-  
-  .footer-contact-details-body a {
-    font-size: 13px;
-  }
-  .footer-contact-details-body .btn-youtube{
-    border: 1px solid rgba(185, 192, 188, 0.253);
-    color:#c7b8b8ee;
-    border-radius: 20px;
-    font-size: 13px;
-    font-weight: 500;
-  }
-  .footer-contact-details-body .btn-telegram{
-    border: 1px solid rgba(185, 192, 188, 0.253);
-    color:#c7b8b8ee;
-    border-radius: 20px;
-    font-weight: 500;
-  
-  
-  }
-  .footer-contact-details-body .btn-Instagram{
-    color:#c7b8b8ee;
-    border: 1px solid rgba(185, 192, 188, 0.253);
-    border-radius: 20px;
-  }
-  .footer-contact-details-body a:hover {
-    color: #b8cd06;
-  }
-  
-  .footer-column-links a {
-    font-size: 12px;
-    color:#888;
-    text-transform: uppercase;
-  border-radius: 10px;
-  text-align: center;
-  padding: 4px 10px;
-  margin: 7px 0px 0px;
-    display: block;
-    font-weight: 500;
-    text-decoration: none;
-  }
-  
-  .footer-column-links a :hover {
-    color:#0EB2E8;
-  }
-  
-  .footer-column-links-tags a {
-    font-size: 10px;
-    text-transform: uppercase;
-    background: #424242f8;
-    color:#888;
-    letter-spacing: .9px;
-    line-height: 14px;
-    font-weight: 700;
-    padding: 8px 15px;
-    display: inline-block;
-    margin: 0 10px 10px 0;
-    text-decoration: none;
-    -webkit-border-radius: 17px;
-  }
-  
-  .footer-section p:hover {
-    color: #b8cd06;
-  }
-  
-  .footer-column-links a:hover {
-    color: #b8cd06;
-  }
-  
-  .footer-column-links-tags a:hover {
-    color: white;
-    transition: 0.4s ease-in-out;
-    background-color: #b8cd06;
-    -webkit-border-radius: 13px;
-  
-  }
-  
-  .footer-post-sec {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
-  }
-  
-  .footer-date {
-    font-size: 11px;
-    color:#888;
-    text-transform: uppercase;
-  }
-  
-  .footer-post-sec img {
-    display: block;
-    max-width: 100%;
-    border-radius: 5%;
-  }
-  .footer-post-sec p {
-    font-size: 12px;
-    color:#888;
-    font-weight: 600;
-  }
-  
-  .footer-section h6 {
-    font-size: 14px;
-    text-align: center;
-    font-weight: 600;
-    color:#c7b8b8ee;
-    text-transform: uppercase;
-  }
-  
-  .footer-top {
-    border-bottom: 3px rgba(255, 255, 255, .05) solid;
-    border-width: 2px;
-    padding: 20px 0px 10px;
-  }
-  
-  .footer-social-icons i {
-    border: 2px solid #424242;
-    padding: 5px 10px;
-    background: #424242;
-    color: #888;
-    font-size: 14px;
-    text-align: center;
-    margin: 6px;
-    -webkit-border-radius: 50%;
-  }
-  
-  .footer-social-icons i:hover {
-    color: white;
-    background-color: #b8cd06;
-    -webkit-transition: all .15s;
-  }
-  
-  .copyright-section p {
-    font-size: 13px;
-    color: rgba(255, 255, 255, .5);
-  }
-  
-  .agency-copy {
-    color: #b8cd06;
-    text-decoration: none;
-  }
-  
-  .footer-payment-icons a {
-    margin: 6px;
-  }
+  background-color: #150a0a;
+}
 
+.footer-left-sec p {
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: #bfa9a9ea;
+}
+
+.left-socials-icons a{
+  color: #DA1C5C;
+  border: 2px solid #DA1C5C;
+  padding: 5px 8px ;
+  font-size: 12px;
+  border-radius: 8px;
+  margin: 0px 4px;
+}
+
+.footer-contact-details-body  {
+ display: flex;
+ justify-content:space-evenly;
+}
+
+.footer-contact-details-body a {
+  font-size: 13px;
+}
+.footer-contact-details-body .btn-youtube{
+  border: 1px solid rgba(185, 192, 188, 0.253);
+  color:#c7b8b8ee;
+  border-radius: 20px;
+  font-size: 13px;
+  font-weight: 500;
+}
+.footer-contact-details-body .btn-telegram{
+  border: 1px solid rgba(185, 192, 188, 0.253);
+  color:#c7b8b8ee;
+  border-radius: 20px;
+  font-weight: 500;
+
+
+}
+.footer-contact-details-body .btn-Instagram{
+  color:#c7b8b8ee;
+  border: 1px solid rgba(185, 192, 188, 0.253);
+  border-radius: 20px;
+}
+.footer-contact-details-body a:hover {
+  color: #b8cd06;
+}
+
+.footer-column-links a {
+  font-size: 12px;
+  color:#888;
+  text-transform: uppercase;
+border-radius: 10px;
+text-align: center;
+padding: 4px 10px;
+margin: 7px 0px 0px;
+  display: block;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.footer-column-links a :hover {
+  color:#0EB2E8;
+}
+
+.footer-column-links-tags a {
+  font-size: 10px;
+  text-transform: uppercase;
+  background: #4242421e;
+  color:#888;
+  letter-spacing: .9px;
+  line-height: 14px;
+  font-weight: 700;
+  padding: 8px 15px;
+  display: inline-block;
+  margin: 0 10px 10px 0;
+  text-decoration: none;
+  -webkit-border-radius: 17px;
+}
+
+.footer-section p:hover {
+  color: #DA1C5C;
+}
+
+.footer-column-links a:hover {
+  color: #DA1C5C;
+}
+
+.footer-column-links-tags a:hover {
+  color: white;
+  transition: 0.4s ease-in-out;
+  background-color:#DA1C5C;
+  -webkit-border-radius: 13px;
+
+}
+
+.footer-post-sec {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.footer-date {
+  font-size: 11px;
+  color:#888;
+  text-transform: uppercase;
+}
+
+.footer-post-sec img {
+  display: block;
+  max-width: 100%;
+  border-radius: 5%;
+}
+.footer-post-sec p {
+  font-size: 12px;
+  color:#888;
+  font-weight: 600;
+}
+
+.footer-section h6 {
+  font-size: 14px;
+  text-align: center;
+  font-weight: 600;
+  color:#c7b8b8ee;
+  text-transform: uppercase;
+}
+
+.footer-top {
+  border-bottom: 3px rgba(255, 255, 255, .05) solid;
+  border-width: 2px;
+  padding: 20px 0px 10px;
+}
+
+.footer-social-icons a{
+  color: #888;
+  font-size: 14px;
+  text-align: center;
+  margin: 6px;
+}
+
+.footer-social-icons a:hover {
+  color: #DA1C5C;
+  -webkit-transition: all .15s;
+}
+
+.copyright-section p {
+  font-size: 13px;
+  color: rgba(255, 255, 255, .5);
+}
+
+.agency-copy {
+  color: #DA1C5C;
+  text-decoration: none;
+}
+
+.footer-payment-icons a {
+  margin: 6px;
+}
 
