--- a/css/add-tocart.css
+++ b/css/add-tocart.css
@@ -14,46 +14,57 @@ body {
 
 /* navbar */
 .navbar {
-  background-color:#0d0d0d;
+  background-color:#0d6efd;
 }
 
 .navbar-nav a {
-  font-size: 14px;
-  font-weight: 500;
-  color:white;
-  letter-spacing: 2px;
+  font-size: 13px;
+  color: white;
+  letter-spacing: 1px;
+  position: relative;
 }
-.dropdown-item{
+
+
+.dropdown-item {
   color: black !important;
 }
 
-
 .nav-brand-icons .nav-item i {
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .dropdown-toggle::after {
-  color:white;
+  color: white;
 }
 
 .nav-brand-icons .btn {
   text-decoration: none;
   background-color:white;
-  color: #0d0d0d;  
+  color: #0d0d0d;
   font-weight: 500;
   padding: 4px 18px;
-  border-radius: 23px;
-
+  border-radius: 2px;
 }
 
 .navbar input {
   width: 370px;
-  height: 40px;
   letter-spacing: 1px;
-  font-size: 14px;
-  border-radius: 11px;
+  font-size: 13px;
+  border-radius: 8px;
 }
 
+
+
+
+
+
+
+
+.role-main-section {
+  z-index: 2;
+  position: relative;
+  background-color: white;
+}
 
 
 
@@ -63,19 +74,13 @@ body {
 .add-to-bag-main-page {
   padding: 70px 0px 20px;
 }
-.add-to-bag-body-content{
-  border-radius: 10px;
-  box-shadow: -2px -7px 16px gainsboro;
-}
 .add-to-bag-body-content .title-top-para {
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 13px;
   letter-spacing: 1px;
-  color: #323232;
 }
 .add-to-carts-featured-products-sizes-btn ul li {
   list-style-type: none;
-  margin: 0px 5px;
+  margin-right: 6px;
 }
 
 .add-tocart-featured-product {
@@ -89,46 +94,46 @@ body {
 font-size: 14px;
 text-align: center;
 }
+
 .types-of-delivery-section a{
 text-decoration: none;
-color: #DA1C5C;
-font-size: 14px;
+color: #04AA6D;
+font-size: 13px;
 font-weight: 500;
 }
 .pincode-input a{
-  color: #DA1C5C;
+  color: #0d6efd;
   font-size: 14px;
   font-weight: 600;
 }
 
 .add-to-carts-featured-products-sizes-btn .btn {
-  border-radius: 10%;
+  border-radius: 100%;
   display: flex;
+  width: 30px;
+  height: 30px;
+  padding:  17px;
   justify-content: center;
-  border: 1px solid #DA1C5C;
   align-items: center;
-  background-color:#DA1C5C;
-  font-size: 13px;
+  background-color:#0d6efd;
+  font-size: 12px;
   color:white;
   font-weight: 600;
 }
 
 .add-to-carts-featured-products-add-tobag-whishlist-btn .btn-1 {
-  background-color:#DA1C5C;
+  background-color:#0d6efd;
   color: white;
+  font-size: 14px;
+  font-weight: 400;
+}
+.add-to-carts-featured-products-add-tobag-whishlist-btn .btn-1:hover {
+ background-color: white;
+ color: #0d6efd;
+ border: 1px solid #0d6efd;
 }
 
-.add-to-carts-featured-products-add-tobag-whishlist-btn {
-  display: flex;
-  gap: 5px;
-}
 
-.add-to-carts-featured-products-add-tobag-whishlist-btn .btn {
-  border: 1px solid #DA1C5C;
-  padding: 6px 40px;
-  text-wrap: nowrap;
-  border-radius: 10px;
-}
 .add-to-carts-featured-products-sizes-btn p{
   font-size: 14px;
 }
@@ -151,7 +156,7 @@ font-weight: 500;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 1px;
-  background-color:#f44336;
+  background-color:#0d6efd;
   border-radius: 6px;
 }
 .rating-date-like-bottom-sec {
@@ -202,15 +207,21 @@ font-weight: 500;
 
 
 
+
 /* footer */
 .footer-section {
-  /* background-color: #020402a9; */
-   background: #222;;
+  position: sticky;
+  bottom: 0;
+  z-index: 1;
+  overflow: hidden;
+  /* background: #222; */
+  background-color: #0d6efd;
+  background-image: url(../homepageimages/Group\ 48095504\ footer-bg.svg);
   padding: 30px 0px 10px;
 }
 
 .footer-left-sec p {
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 0.7px;
   font-weight: 500;
   color: #ebebeb;
@@ -218,33 +229,24 @@ font-weight: 500;
 
 .left-socials-icons a {
   color: #ebebeb;
-  border: 1px solid #ebebeb;
-  padding: 8px 12px;
-  font-size: 14px;
+  border: 1px solid white;
+  padding: 8px;
+  font-size: 10px;
   border-radius: 100%;
 }
 
 .footer-column-links a {
-  font-size: 13px;
+  font-size: 11px;
   color: #ebebeb;
   text-transform: uppercase;
-  border-radius: 10px;
   padding: 4px 10px;
   margin: 7px 0px 0px;
   display: block;
-  text-decoration: underline;
-  font-weight: 500;
-  text-decoration: none;
 }
 
-.footer-column-links a :hover {
-  color: #ebebeb;
-}
 
 .footer-column-links-tags a {
-  font-size: 10px;
-  text-transform: uppercase;
-  background: #4242421e;
+  font-size: 11px;
   border: 1px solid rgba(255, 255, 255, 0.271);
   color: #ebebeb;
   letter-spacing: .9px;
@@ -256,15 +258,6 @@ font-weight: 500;
   text-decoration: none;
   -webkit-border-radius: 17px;
 }
-
-.footer-section p:hover {
-  color: #DA1C5C;
-}
-
-.footer-column-links a:hover {
-  color: #DA1C5C;
-}
-
 .footer-column-links-tags a:hover {
   color: white;
   transition: 0.4s ease-in-out;
@@ -281,7 +274,7 @@ font-weight: 500;
 }
 
 .footer-date {
-  font-size: 12px;
+  font-size: 10px;
   color: #ebebeb;
   text-transform: uppercase;
 }
@@ -314,36 +307,28 @@ font-weight: 500;
 
 .footer-social-icons a {
   color: #ebebeb;
-  font-size: 14px;
+  font-size: 13px;
   text-align: center;
   margin: 6px;
 }
 
-.footer-social-icons a:hover {
-  color: #DA1C5C;
-  -webkit-transition: all .15s;
-}
-
-
-.footer-delevery-process{
-  background-color: #0d0d0d; 
+.footer-delevery-process {
   padding: 30px 0px 30px;
 }
-.footer-delevery-process p{
-  font-size: 13px;
+
+.footer-delevery-process p {
+  font-size: 11px;
   letter-spacing: 1px;
 }
-.footer-delevery-process i{
-  font-size: 29px;
-  color:#949494;
+
+.footer-delevery-process i {
+  font-size: 20px;
+  /* color: #949494; */
   margin-bottom: 13px;
 }
 
-
-
-
 .copyright-section p {
-  font-size: 13px;
+  font-size: 11px;
   color: #ebebeb;
   font-family: "DIN Next", sans-serif;
 }
@@ -355,12 +340,32 @@ font-weight: 500;
 
 .footer-social-nav li {
   list-style-type: none;
+  font-size: 11px;
+}
+
+
+.window-top-bottom-scroll{
+background-color: white;
+position: fixed;
+bottom: 0;
+right: 10px;
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 50%;
+height: 50px;
+width: 50px;
+}
+
+.window-top-bottom-scroll .btn{
+  padding: 10px 20px;
   font-size: 13px;
 }
 
+
 .footer-social-nav li a {
   font-size: 13px;
-  border: 1px solid ;
+  border: 1px solid;
   padding: 5px 6px;
   border-radius: 23px;
   border: 1px solid rgba(255, 255, 255, 0.271);
