--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,19 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* navbar */
 .navbar {
-  background-color: #0d0d0d;
+  background-color: #0d6efd;
 }
 
 .navbar-nav a {
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 13px;
   color: white;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
+  position: relative;
 }
 
 .dropdown-item {
@@ -29,7 +29,7 @@ body {
 }
 
 .nav-brand-icons .nav-item i {
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .dropdown-toggle::after {
@@ -38,32 +38,23 @@ body {
 
 .nav-brand-icons .btn {
   text-decoration: none;
-  background-color:white;
+  background-color: white;
   color: #0d0d0d;
   font-weight: 500;
   padding: 4px 18px;
-  border-radius: 23px;
+  border-radius: 2px;
 }
 
 .navbar input {
-  text-align: center;
   width: 370px;
-  border: 3px solid #0d6efd;
   letter-spacing: 1px;
-  font-size: 14px;
-  border-radius: 23px;
+  font-size: 13px;
+  border-radius: 8px;
 }
-
-
-
-
-
-
 
 /*  */
 .banner-product-all-categories {
   padding: 30px 0px 20px;
-
 }
 
 .banner-product-all-categories-main-body h6 {
@@ -79,9 +70,6 @@ body {
   background-color: white;
 }
 
-
-
-
 /* left side */
 .main-wrapper-section .home-leftside-wrapper .card {
   box-shadow: 0px 3px 26px rgba(0, 0, 0, 0.062745098);
@@ -96,7 +84,7 @@ body {
 }
 
 .home-leftside-wrapper-price {
-  color: #DA1C5C;
+  color: #da1c5c;
   font-weight: 700;
 }
 
@@ -110,11 +98,22 @@ body {
   padding: 10px 16px;
 }
 .home-leftside-wrapper .card-body .home-leftside-wrapper-btn:hover {
- background-color:#0d0d0d;
- color: whitesmoke;
- transition: 0.3s ease-in-out;
+  background-color: #0d0d0d;
+  color: whitesmoke;
+  transition: 0.3s ease-in-out;
 }
 
+.home-leftside-wrapper .card-body .home-leftside-wrapper-btn:hover {
+  background-color: white;
+  color: #0d6efd;
+  border: 1px solid #0d6efd;
+}
+
+.home-leftside-wrapper .card-body .home-leftside-wrapper-btn:hover {
+  background-color: #0d0d0d;
+  color: whitesmoke;
+  transition: 0.3s ease-in-out;
+}
 
 /* right side */
 /* product-cards */
@@ -140,7 +139,6 @@ body {
 .product-cards .product-cards-main-body {
   position: relative;
   height: 100%;
-  
 }
 .product-body .product-info {
   list-style-type: none;
@@ -151,13 +149,13 @@ body {
   font-size: 17px;
   font-style: italic;
   font-weight: 600;
-  color:#0d0d0d;
+  color: #0d0d0d;
   letter-spacing: 0.5px;
 }
 
 .product-body .discount {
   font-size: 15px;
-  color: #DA1C5C;
+  color: #da1c5c;
 }
 
 .product-cards .product-body .buy-now-btn .btn {
@@ -170,7 +168,6 @@ body {
   color: black;
   padding: 7px 23px;
 }
-
 
 .product-tag {
   position: absolute;
@@ -187,12 +184,12 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 15px;
-  background-color:#0d0d0d;
-  border: 2px solid #0EB2E8;
+  background-color: #0d0d0d;
+  border: 2px solid #0eb2e8;
 }
 
 .badge-secondary:hover {
-  background-color:#0d6efd;
+  background-color: #0d6efd;
   transition: 0.3s ease-in-out;
 }
 .badge-secondary a:hover {
@@ -202,28 +199,24 @@ body {
   color: whitesmoke;
 }
 
-
 .product-price {
-  color: #0D775E;
+  color: #0d775e;
   font-weight: 700;
   font-size: 18px;
 }
 
 .product-body .left-sidebar-yellow-star {
   font-size: 14px;
-  color:#0d6efd;
+  color: #0d6efd;
   margin-bottom: 4px;
 }
 
 .product-body .home-card-btn {
-  color: #DA1C5C;
+  color: #da1c5c;
   font-size: 14px;
   font-weight: 600;
   text-decoration: none;
 }
-
-
-
 
 /* computer-section */
 .computer-section {
@@ -233,7 +226,6 @@ body {
 .computer-main-body-content .computer-main-card-body {
   position: relative;
 }
-
 
 .product-tag-computer-section {
   position: absolute;
@@ -252,7 +244,7 @@ body {
   align-items: center;
   font-size: 15px;
   background-color: #150a0a42;
-  border: 1px solid #0EB2E8;
+  border: 1px solid #0eb2e8;
 }
 
 .computer-section .badge-secondary:hover {
@@ -262,7 +254,6 @@ body {
 .computer-section .badge-secondary a:hover {
   color: white;
 }
-
 
 .computer-main-body-content .buy-now-btn .btn {
   background-color: #0eb2e82d;
@@ -276,7 +267,6 @@ body {
 }
 
 /* parallax-section */
-
 
 .homepage-parallax-section-1 {
   background-image: url(../homepageimages/parallax-1.webp);
@@ -296,6 +286,7 @@ body {
   color: white;
   font-weight: 600;
   font-size: 40px;
+
   letter-spacing: 2px;
 }
 
@@ -337,11 +328,6 @@ body {
   background-attachment: fixed;
 }
 
-
-
-
-
-
 /* electronic-section */
 .electronic-section {
   padding: 20px 0px 30px;
@@ -357,7 +343,7 @@ body {
   align-items: center;
   font-size: 15px;
   background-color: #150a0a42;
-  border: 1px solid #0EB2E8;
+  border: 1px solid #0eb2e8;
 }
 
 .electronic-section .badge-secondary:hover {
@@ -367,7 +353,6 @@ body {
 .electronic-section .badge-secondary a:hover {
   color: white;
 }
-
 
 .electronic-section-main-body-content .electronic-section-card-body {
   position: relative;
@@ -391,12 +376,9 @@ body {
   padding: 7px 23px;
 }
 
-
-
 /* trending-section */
 .trending-section {
   background-color: #ebebeb1c;
-
 }
 
 .trending-section h4 {
@@ -405,8 +387,6 @@ body {
   letter-spacing: 1.7px;
   font-weight: 700;
 }
-
-
 
 .trending-section.trending-main-body {
   position: relative;
@@ -422,7 +402,7 @@ body {
   align-items: center;
   font-size: 15px;
   background-color: #150a0a42;
-  border: 1px solid #0EB2E8;
+  border: 1px solid #0eb2e8;
 }
 
 .trending-section .badge-secondary:hover {
@@ -432,7 +412,6 @@ body {
 .trending-section .badge-secondary a:hover {
   color: white;
 }
-
 
 .product-tag-trending-section {
   position: absolute;
@@ -452,19 +431,18 @@ body {
   padding: 7px 23px;
 }
 
-
-
 /* our-team-section */
 
 .our-team-section {
   background-color: #ebebeb2c;
   padding: 20px 0px 20px;
-
 }
 
 .our-team-section .our-team-section-top-content h2 {
   font-size: 36px;
-
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #1b4ed1,
+    0 0 20px rgba(53, 110, 255, 0.45098039215686275),
+    0 0 55px rgba(53, 110, 255, 0.45098039215686275);
 }
 
 .our-team-section .our-team-section-top-content p {
@@ -484,7 +462,6 @@ body {
   border-radius: 23px;
   font-weight: 600;
   padding: 0.4rem 1.4rem;
-
 }
 
 .our-team-section .card .card-img-top {
@@ -494,9 +471,10 @@ body {
 }
 
 .our-team-section .card {
-  padding: 25px 25px;
+  padding: 25px;
   flex-wrap: wrap;
-  border: 3px solid #f2f2f2f8;
+  border: 3px solid #00a5ff;
+  box-shadow: 0 0 20px rgba(53, 110, 255, 0.45098039215686275);
   border-radius: 10px;
   margin: 10px 0px;
 }
@@ -505,7 +483,6 @@ body {
   color: #404040;
   font-family: "Source Sans Pro", sans-serif;
   margin-bottom: 15px;
-
 }
 
 .our-team-section .card h6 {
@@ -514,7 +491,6 @@ body {
   font-weight: 600;
   letter-spacing: 1px;
   margin-bottom: 22px;
-
 }
 
 .our-team-section .card .card-body a {
@@ -525,12 +501,6 @@ body {
   font-size: 17px;
   text-decoration: none;
 }
-
-
-
-
-
-
 
 /*Limited-offers-section */
 .Limited-offers-section {
@@ -564,11 +534,7 @@ body {
   color: white;
   padding: 6px 20px;
   border-radius: 23px;
-
 }
-
-
-
 
 /* Cosmetics-sales-section */
 
@@ -581,7 +547,6 @@ body {
   color: white;
   position: relative;
 }
-
 
 .sale-position {
   position: absolute;
@@ -664,16 +629,6 @@ body {
   padding: 8px 20px;
 }
 
-
-
-
-
-
-
-
-
-
-
 /* Discover Latest Offer */
 .Discover-Latest-Offer {
   padding: 20px 0px 20px;
@@ -694,19 +649,31 @@ body {
   color: white;
   padding: 6px 20px;
   border-radius: 23px;
-
 }
 
-
-
-
-
-
-
-
-
-
-
+/* homepage-bottom-newslater-section */
+.homepage-bottom-newslater-section {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url(../homepageimages/newslater-bg.jpeg);
+  padding: 40px 0px 50px;
+}
+.homepage-bottom-newslater-section .newslater-body h4 {
+  color: white;
+  font-size: 30px;
+  font-weight: 700;
+}
+.homepage-bottom-newslater-section .newslater-body input {
+  background-color: rgba(255, 255, 255, 0.119);
+  border: 1px solid rgb(255 255 255 / 62%);
+}
+.homepage-bottom-newslater-section .newslater-body .btn {
+  font-size: 16px;
+  border: 1px solid rgb(255 255 255 / 62%);
+}
+.homepage-bottom-newslater-section .newslater-body .btn:hover {
+  color: white;
+  background-color: rgba(255, 255, 255, 0.119);
+}
 
 /* brand-company-section */
 .brand-company-section {
@@ -716,14 +683,14 @@ body {
 
 .brand-company-section img {
   padding: 8px;
-  box-shadow: 0.00px 1.00px 3px 0px rgba(0, 0, 0, 0.089);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.089);
 }
 
 .brand-company-section h4 {
   font-size: 32px;
   letter-spacing: 2px;
   font-weight: 600;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .brand-company-section p {
@@ -733,21 +700,20 @@ body {
   letter-spacing: 1px;
 }
 
-
-
-
 /* footer */
 .footer-section {
   position: sticky;
   bottom: 0;
   z-index: 1;
   overflow: hidden;
-  background: #222;
+  /* background: #222; */
+  background-color: #0d6efd;
+  background-image: url(../homepageimages/Group\ 48095504\ footer-bg.svg);
   padding: 30px 0px 10px;
 }
 
 .footer-left-sec p {
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 0.7px;
   font-weight: 500;
   color: #ebebeb;
@@ -755,36 +721,26 @@ body {
 
 .left-socials-icons a {
   color: #ebebeb;
-  border: 1px solid #ebebeb;
-  padding: 8px 12px;
-  font-size: 14px;
+  border: 1px solid white;
+  padding: 8px;
+  font-size: 10px;
   border-radius: 100%;
 }
 
 .footer-column-links a {
-  font-size: 13px;
+  font-size: 11px;
   color: #ebebeb;
   text-transform: uppercase;
-  border-radius: 10px;
   padding: 4px 10px;
   margin: 7px 0px 0px;
   display: block;
-  text-decoration: underline;
-  font-weight: 500;
-  text-decoration: none;
-}
-
-.footer-column-links a :hover {
-  color: #ebebeb;
 }
 
 .footer-column-links-tags a {
-  font-size: 10px;
-  text-transform: uppercase;
-  background: #4242421e;
+  font-size: 11px;
   border: 1px solid rgba(255, 255, 255, 0.271);
   color: #ebebeb;
-  letter-spacing: .9px;
+  letter-spacing: 0.9px;
   line-height: 14px;
   font-weight: 600;
   padding: 8px 15px;
@@ -793,21 +749,11 @@ body {
   text-decoration: none;
   -webkit-border-radius: 17px;
 }
-
-.footer-section p:hover {
-  color: #DA1C5C;
-}
-
-.footer-column-links a:hover {
-  color: #DA1C5C;
-}
-
 .footer-column-links-tags a:hover {
   color: white;
   transition: 0.4s ease-in-out;
-  background-color: #DA1C5C;
+  background-color: #da1c5c;
   -webkit-border-radius: 13px;
-
 }
 
 .footer-post-sec {
@@ -818,7 +764,7 @@ body {
 }
 
 .footer-date {
-  font-size: 12px;
+  font-size: 10px;
   color: #ebebeb;
   text-transform: uppercase;
 }
@@ -844,45 +790,35 @@ body {
 }
 
 .footer-top {
-  border-bottom: 3px rgba(255, 255, 255, .05) solid;
+  border-bottom: 3px rgba(255, 255, 255, 0.05) solid;
   border-width: 2px;
   padding: 20px 0px 10px;
 }
 
 .footer-social-icons a {
   color: #ebebeb;
-  font-size: 14px;
+  font-size: 13px;
   text-align: center;
   margin: 6px;
 }
 
-.footer-social-icons a:hover {
-  color: #DA1C5C;
-  -webkit-transition: all .15s;
-}
-
-
 .footer-delevery-process {
-  background-color: #0d0d0d;
   padding: 30px 0px 30px;
 }
 
 .footer-delevery-process p {
-  font-size: 13px;
+  font-size: 11px;
   letter-spacing: 1px;
 }
 
 .footer-delevery-process i {
-  font-size: 29px;
-  color: #949494;
+  font-size: 20px;
+  /* color: #949494; */
   margin-bottom: 13px;
 }
 
-
-
-
 .copyright-section p {
-  font-size: 13px;
+  font-size: 11px;
   color: #ebebeb;
   font-family: "DIN Next", sans-serif;
 }
@@ -894,6 +830,24 @@ body {
 
 .footer-social-nav li {
   list-style-type: none;
+  font-size: 11px;
+}
+
+.window-top-bottom-scroll {
+  background-color: white;
+  position: fixed;
+  bottom: 0;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.window-top-bottom-scroll .btn {
+  padding: 10px 20px;
   font-size: 13px;
 }
 
@@ -905,7 +859,5 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.271);
   margin-right: 3px;
 }
-
-
 
 /* 984 */
