--- a/css/cart.css
+++ b/css/cart.css
@@ -9,28 +9,27 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* navbar */
 .navbar {
-  background-color: #0d0d0d;
+  background-color: #0d6efd;
 }
 
 .navbar-nav a {
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 13px;
   color: white;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
+  position: relative;
 }
 
 .dropdown-item {
   color: black !important;
 }
 
-
 .nav-brand-icons .nav-item i {
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .dropdown-toggle::after {
@@ -43,26 +42,26 @@ body {
   color: #0d0d0d;
   font-weight: 500;
   padding: 4px 18px;
-  border-radius: 23px;
-
+  border-radius: 2px;
 }
 
 .navbar input {
   width: 370px;
-  height: 40px;
   letter-spacing: 1px;
-  font-size: 14px;
-  border-radius: 11px;
+  font-size: 13px;
+  border-radius: 8px;
 }
 
 
 
 
-
-
+.main-top-cart-delivery-section{
+  max-width: 1024px;
+  margin: 0px auto;
+}
 .cart-white-bg-section {
   background-color:#ebebeb;
-  padding: 10px;
+  padding: 20px;
 }
 
 .plus-minus a {
@@ -73,9 +72,9 @@ body {
 }
 
 .plus-minus button {
-  padding: 0px 5px 0px;
+  padding: 0px 10px 0px;
   text-decoration: none;
-  border: 1px solid white;
+  border: 1px solid #0d0d0d;
 }
 
 .cart-white-bg-section .pricing {
@@ -101,16 +100,18 @@ body {
 }
 
 
+
+
 /* footer */
 .footer-section {
-  /* background-color: #020402a9; */
-  background: #222;
-  ;
+  /* background: #222; */
+  background-color: #0d6efd;
+  background-image: url(../homepageimages/Group\ 48095504\ footer-bg.svg);
   padding: 30px 0px 10px;
 }
 
 .footer-left-sec p {
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 0.7px;
   font-weight: 500;
   color: #ebebeb;
@@ -118,36 +119,26 @@ body {
 
 .left-socials-icons a {
   color: #ebebeb;
-  border: 1px solid #ebebeb;
-  padding: 8px 12px;
-  font-size: 14px;
+  border: 1px solid white;
+  padding: 8px;
+  font-size: 10px;
   border-radius: 100%;
 }
 
 .footer-column-links a {
-  font-size: 13px;
+  font-size: 11px;
   color: #ebebeb;
   text-transform: uppercase;
-  border-radius: 10px;
   padding: 4px 10px;
   margin: 7px 0px 0px;
   display: block;
-  text-decoration: underline;
-  font-weight: 500;
-  text-decoration: none;
-}
-
-.footer-column-links a :hover {
-  color: #ebebeb;
 }
 
 .footer-column-links-tags a {
-  font-size: 10px;
-  text-transform: uppercase;
-  background: #4242421e;
+  font-size: 11px;
   border: 1px solid rgba(255, 255, 255, 0.271);
   color: #ebebeb;
-  letter-spacing: .9px;
+  letter-spacing: 0.9px;
   line-height: 14px;
   font-weight: 600;
   padding: 8px 15px;
@@ -156,21 +147,11 @@ body {
   text-decoration: none;
   -webkit-border-radius: 17px;
 }
-
-.footer-section p:hover {
-  color: #DA1C5C;
-}
-
-.footer-column-links a:hover {
-  color: #DA1C5C;
-}
-
 .footer-column-links-tags a:hover {
   color: white;
   transition: 0.4s ease-in-out;
-  background-color: #DA1C5C;
+  background-color: #da1c5c;
   -webkit-border-radius: 13px;
-
 }
 
 .footer-post-sec {
@@ -181,7 +162,7 @@ body {
 }
 
 .footer-date {
-  font-size: 12px;
+  font-size: 10px;
   color: #ebebeb;
   text-transform: uppercase;
 }
@@ -207,45 +188,35 @@ body {
 }
 
 .footer-top {
-  border-bottom: 3px rgba(255, 255, 255, .05) solid;
+  border-bottom: 3px rgba(255, 255, 255, 0.05) solid;
   border-width: 2px;
   padding: 20px 0px 10px;
 }
 
 .footer-social-icons a {
   color: #ebebeb;
-  font-size: 14px;
+  font-size: 13px;
   text-align: center;
   margin: 6px;
 }
 
-.footer-social-icons a:hover {
-  color: #DA1C5C;
-  -webkit-transition: all .15s;
-}
-
-
 .footer-delevery-process {
-  background-color: #0d0d0d;
   padding: 30px 0px 30px;
 }
 
 .footer-delevery-process p {
-  font-size: 13px;
+  font-size: 11px;
   letter-spacing: 1px;
 }
 
 .footer-delevery-process i {
-  font-size: 29px;
-  color: #949494;
+  font-size: 20px;
+  /* color: #949494; */
   margin-bottom: 13px;
 }
 
-
-
-
 .copyright-section p {
-  font-size: 13px;
+  font-size: 11px;
   color: #ebebeb;
   font-family: "DIN Next", sans-serif;
 }
@@ -257,6 +228,24 @@ body {
 
 .footer-social-nav li {
   list-style-type: none;
+  font-size: 11px;
+}
+
+.window-top-bottom-scroll {
+  background-color: white;
+  position: fixed;
+  bottom: 0;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.window-top-bottom-scroll .btn {
+  padding: 10px 20px;
   font-size: 13px;
 }
 
@@ -268,3 +257,5 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.271);
   margin-right: 3px;
 }
+
+/* 984 */
